src/test/resources/semantic/reject/equalInvalidTypesVoid.ul
void main() {
}

void foo() {
    boolean result;
    result = 6 == main();
}
